Fix vercel config

--- a/vercel.JSON
+++ b/vercel.JSON
@@ -2,13 +2,13 @@
   "version": 2,
   "builds": [
     {
-      "src": "package.json",
+      "src": "vite.config.js",
       "use": "@vercel/static-build",
       "config": { "distDir": "dist" }
     }
   ],
   "routes": [
-    { "handle": "filesystem" }, 
+    { "handle": "filesystem" },
     { "src": "/.*", "dest": "/index.html" }
   ]
 }
